styles.css
body {
    background-image: url(./img/main-bg.png), url(./img/dirt-block-bg.png);
    background-size: cover;
    background-position: center top, center bottom;
    background-repeat: no-repeat, repeat;
    background-color: rgb(0, 101, 15);
    font-family: "Pixelify Sans", sans-serif;
    font-optical-sizing: auto;
    /* 400-700 font weight */
    /* font-weight: ; */
    font-style: normal;
    font-size: 32px;
    zoom: 0.6;
}

/* Push the footer to the bottom */
html, body {
    height: 100%;
    margin: 0;
}
/* Push the footer to the bottom */
body {
    display: flex;
    flex-direction: column;
    min-height: 100%;
}

.container {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
}

#webpage-title {
    display: flex;
    justify-content: center;
}

#webpage-title img {
    flex: 1 1 auto;
    max-width: 1024px;
    width: 100%;
}

#music-status {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 16px;
}

/* Remove button audio button background */
#audio-no-mute {
    background-color: transparent;
    border: transparent;
    padding: 0;
}



#all-stats {
    display: flex;
    flex-direction: column;
}


#game-state {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1024px;
    max-height: 296px;
    width: 100%;
    padding: 40px 128px 0px 128px;
    margin: auto;
    margin-bottom: 0px;
    box-sizing: border-box;
}

#game-state img {
    flex: 1 1 auto;
    max-width: 512px;
    min-width: 512px;
    width: 100%;
}

/* Inspiration: https://codepen.io/joexmdq/pen/EOMLzg */
#reset-button img {
    /* Used to remove line below button */
    display: block;
    /* Can resize img/button */
    max-width: 200px;
    min-width: 100px;
    width: 100%;
}

#reset-button {
    transform: translateY(-130px);
    padding: 0;
    border: 0;
}

/* When not hovering, hide reset-hover */
#reset-button .reset-hover {
    display: none;
}

/* When hover, hide reset-no-hover button */
#reset-button:hover .reset-no-hover {
    display: none;
}

/* When hover, display reset-hover img */
#reset-button:hover .reset-hover {
    display: block;
}

#game-state #oak-sign-header {
    display: flex;
    flex: 1 1 auto;
    padding-top: 32px;
    /* Makes position over the image */
    position: absolute;
    font-weight: 600;
    font-size: 40px;
}

#game-state #round-results {
    width: 300px;
    text-align: center;
    transform: translateY(-150px);
}



#scoreboard {
    display: flex;
    justify-content: center;
    gap: 32px;
}

#player-scoreboard,
#computer-scoreboard {
    display: flex;
    flex-direction: column;
}

.stats {
    display: flex;
    flex-direction: column;
    align-items: center;
    transform: translateY(-90px);
    font-weight: 600;
}




#buttons {
    display: flex;
    flex-direction: row;
    background-color: transparent;
    justify-content: center;
    gap: 80px;
    box-sizing: border-box;
    padding: 0 132px 0 132px;
}

#buttons button img {
    flex: 1 1 auto;
    /* Used to remove line below button */
    display: block;
    /* Can resize img/button */
    max-width: 200px;
    min-width: 100px;
    width: 100%;
    
}

#buttons button {
    padding: 0;
    border: 0;
    transition: 
        box-shadow 0.2s ease-out,
        transform 0.2s ease-out;
}

#buttons button:hover {
    background-color: rgba(162, 156, 79, 0.65);
    border-color: transparent;
    backdrop-filter: blur(1000px);
    box-shadow: 0 0 70px 30px #fff5cb;
    transform: translateY(-20px);
    transition: 
        transform 0.1s ease-in,
        box-shadow 0.1s ease-in;
}

#footer-links {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 64px;
    padding: 64px;
}

#github {
    display: flex;
    gap: 10px;
    text-decoration: none;
    color: black;
    transition:
        transform 0.1s ease-out;
}

#github img {
    width: 40px;
    height: 40px;
}

/* Hover effect of github link */
#github:hover {
    transform: translateY(-5px);
    transition: 
        transform 0.1s ease-in;
}

